put back content category
